tests/codegen/fail/unsupported_for_build.ql
fn main() -> Int {
    for value in 0 {
        break
    }
    return 0
}
